# mx-sc-interact-dapp

./: .gitignore  Cargo.toml  README.md  setup.sh
api/: Cargo.toml
api/src/services/interactor/: basic_interact.rs
api/src/services/interactor/basic_interact/: basic_interact_state.rs
api/src/services/output/: ping-pong-egld.abi.json  ping-pong-egld.imports.json  ping-pong-egld.mxsc.json  ping-pong-egld.wasm
api/src/services/sc-query-service/src/controller/: query_controller.rs
api/src/services/sc-query-service/src/model/: timestamp_model.rs
api/src/services/sc-query-service/src/view/: timestamp_view.rs
frontend/www/: package-lock.json
